fix: vertical alignment of calendar month label

--- a/src/angular-public/datepicker/datepicker-content/datepicker-content.component.scss
+++ b/src/angular-public/datepicker/datepicker-content/datepicker-content.component.scss
@@ -164,7 +164,6 @@
         .sbb-calendar-controls-right-arrow {
           width: pxToEm($defaultPickerIconSize);
           height: $datePickerCalendarHeaderHeight;
-          margin-top: pxToEm($datePickerCalendarBorderWidth);
           vertical-align: middle;
 
           @include publicOnly() {
